force-app/main/default/objects/Account_Plan__c/Account_Plan__c.object-meta.xml
<CustomObject>
    <label>Account Plan</label>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>APID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>