force-app/main/default/objects/Account_Plan__c/fields/Negotiation_drives__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_drives__c</fullName>
    <label>Negotiation drives</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>