force-app/main/default/objects/Account_Plan__c/fields/What_are_our_main_relationship__c.field-meta.xml
<CustomField>
    <fullName>What_are_our_main_relationship__c</fullName>
    <label>What are our main relationship?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>