force-app/main/default/objects/Account_Plan__c/fields/What_are_the_expansion_drivers__c.field-meta.xml
<CustomField>
    <fullName>What_are_the_expansion_drivers__c</fullName>
    <label>What are the expansion drivers?</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>