force-app/main/default/objects/Account_Plan__c/fields/What_do_they_sell__c.field-meta.xml
<CustomField>
    <fullName>What_do_they_sell__c</fullName>
    <label>What do they sell?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>