force-app/main/default/objects/Account_Plan__c/fields/What_is_the_account_mapping__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_account_mapping__c</fullName>
    <label>What is the account mapping?</label>
    <length>15000</length>
    <type>Html</type>
</CustomField>