force-app/main/default/objects/Account_Plan__c/fields/What_size_are_they__c.field-meta.xml
<CustomField>
    <fullName>What_size_are_they__c</fullName>
    <label>What size are they?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Big</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>