force-app/main/default/objects/Account_Plan__c/fields/Who_are_their_clients__c.field-meta.xml
<CustomField>
    <fullName>Who_are_their_clients__c</fullName>
    <label>Who are their clients?</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>