force-app/main/default/objects/Account_Plan__c/fields/Willingness_to_pay_WTP__c.field-meta.xml
<CustomField>
    <fullName>Willingness_to_pay_WTP__c</fullName>
    <label>Willingness to pay (WTP)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>