force-app/main/default/objects/Account_Plan__c/fields/X1500__c.field-meta.xml
<CustomField>
    <fullName>X1500__c</fullName>
    <label>What problems are they facing?</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>